@@ -11,6 +11,10 @@
 - Errors caused by bad values in a config file now show the config section
   to make debugging easier.  Patch by Marc Abramowitz.
 
+- Setting ``redirect_stderr=true`` in an `[eventlistener:x]`` section is now
+  disallowed because any messages written to ``stderr`` would interfere
+  with the eventlistener protocol on ``stdout``.
+
 3.1.3 (2014-10-28)
 ------------------
 
